<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:orientation="vertical"
    android:padding="@dimen/padding_8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/et_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:hint="@string/hint_input"
        android:textSize="@dimen/et_text_size"
        android:layout_marginEnd="@dimen/margin_8"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_result"
        android:textSize="@dimen/tv_text_size"
        android:maxLines="1"
        android:ellipsize="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_1"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_2"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_3"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_add"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_4"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_5"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_6"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_subtract"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_7"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_8"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_9"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_multiply"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="4"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_ac"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_0"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_equal"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>

        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_divide"
            android:textSize="@dimen/btn_text_size"
            style="@style/AppTheme.Button"/>
    </LinearLayout>

</LinearLayout>